--- a/src/app/paginas/login/login.page.html
+++ b/src/app/paginas/login/login.page.html
@@ -2,6 +2,56 @@
 <ion-content>
   <div class="principal">
 
+    <br>
+
+
+    <ion-card-content id="card">
+
+
+
+      <img class="logo" src= "../../../assets/logo.png" alt = "logo" >
+      
+      <ion-input  class="txt"
+      type="text"
+      [(ngModel)]="nombreUsuario"
+      name="correo"
+      placeholder="Usuario">
+      </ion-input>
+
+      <ion-input  class="txt" type="password"
+      [(ngModel)]="contrasenia"
+      name="password"
+      placeholder="Contraseña">
+      </ion-input>
+
+   
+
+
+
+      <br>
+      <br>
+
+
+
+
+
+
+
+      <ion-button color="dark"  id="btn" shape="round">Iniciar</ion-button>
+
+      <br>
+      <br>
+      <a href="" >
+        Registrar
+      </a>
+    
+    </ion-card-content>
+    
+
+    
+
+
+
   </div>
 
 </ion-content>
