--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,8 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 
+.principal{
+    width: 100%;
+    height: 100%;
+    background-image: url("assets/fondo1.png");
+}
