--- a/src/app/paginas/carrito/carrito.page.html
+++ b/src/app/paginas/carrito/carrito.page.html
@@ -2,7 +2,26 @@
 
 <ion-content>
     <div class="principal">
-
+        <ion-list class="tras">
+            <ion-card *ngFor="let p of carro" >
+                <ion-card-content>
+                    <ion-row class="ion-align-items-center">
+                        <ion-col size="4" class="ion-text-left" >
+                            <ion-label color="secondary">
+                                <b>{{p.nombre}}</b>
+                            </ion-label>
+                        </ion-col>
+                        <ion-col size="6" class="ion-text-center">
+                            <ion-row>
+                                <ion-label color="secondary">
+                                    <b>{{p.nombre}}</b>
+                                </ion-label>
+                            </ion-row>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </ion-list>
     </div>
 
 </ion-content>
