--- a/src/global.scss
+++ b/src/global.scss
@@ -29,5 +29,7 @@
 .principal{
     width: 100%;
     height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-image: url("assets/fondo1.png");
 }
