--- a/src/app/paginas/inicio/inicio.page.html
+++ b/src/app/paginas/inicio/inicio.page.html
@@ -1,5 +1,6 @@
 <app-header ></app-header>
 
+
 <ion-content>
     <div class="principal">
         <ion-list class="tras">
@@ -8,7 +9,9 @@
                     <ion-row class="ion-align-items-center">
                         <ion-col size="4" class="ion-text-left" >
                             <ion-label color="secondary">
-                                <b>{{p.nombre}}</b>
+                               
+                                <img src="{{p.imagenProd}}" alt="Flowers in Chania" height="40px" width="20px">
+                                
                             </ion-label>
                         </ion-col>
                         <ion-col size="6" class="ion-text-center">
@@ -28,7 +31,7 @@
                         </ion-col>
                         <ion-col size="2" >
                             <ion-button fill="clear" (click)="agregarCarro(p)">
-                                <ion-icon name="add">
+                                <ion-icon name="add-circle-outline" style="height: 40px; width: 40px;" >
                                 </ion-icon>
                             </ion-button>
                         </ion-col>
