Listado y cracion del api res Carrito

--- a/src/app/paginas/carrito/carrito.page.html
+++ b/src/app/paginas/carrito/carrito.page.html
@@ -3,7 +3,7 @@
 <ion-content>
     <div class="principal">
         <ion-list class="tras">
-            <ion-card *ngFor="let p of carro" >
+            <ion-card *ngFor="let p of producto" >
                 <ion-card-content>
                     <ion-row class="ion-align-items-center">
                         <ion-col size="4" class="ion-text-left" >
