--- a/src/app/paginas/login/login.page.html
+++ b/src/app/paginas/login/login.page.html
@@ -24,7 +24,7 @@
       <br>
       <br>
 
-      <ion-button color="dark"  id="btn" shape="round" (click)= logeoCliente()>Iniciar</ion-button>
+      <ion-button color="dark"  id="btn" shape="round" (click)= logeoCliente($event)>Iniciar</ion-button>
       
       <br>
       <br>
