--- a/src/app/paginas/carrito/carrito.page.html
+++ b/src/app/paginas/carrito/carrito.page.html
@@ -2,26 +2,50 @@
 
 <ion-content>
     <div class="principal">
-        <ion-list class="tras">
-            <ion-card *ngFor="let p of producto" >
-                <ion-card-content>
+            <ion-card  class="tras">
+                <ion-card-header>
+                    <ion-card-title>Mi Carrito</ion-card-title>
+                        <ion-row>
+                            <ion-col size="4" class="ion-text-center">
+                                <ion-label>
+                                    <h3>Producto</h3>
+                                </ion-label>
+                            </ion-col>
+                            <ion-col size="4" class="ion-text-center">
+                                <ion-label>
+                                    <h3>Precio</h3>
+                                </ion-label>
+                            </ion-col>
+                            <ion-col size="4" class="ion-text-center"></ion-col>
+                        </ion-row>
+                </ion-card-header>
+                <ion-card-content *ngFor="let p of producto">
                     <ion-row class="ion-align-items-center">
-                        <ion-col size="4" class="ion-text-left" >
+                        <ion-col size="6" class="ion-text-left">
                             <ion-label color="secondary">
                                 <b>{{p.nombre}}</b>
                             </ion-label>
                         </ion-col>
-                        <ion-col size="6" class="ion-text-center">
-                            <ion-row>
-                                <ion-label color="secondary">
-                                    <b>{{p.nombre}}</b>
-                                </ion-label>
-                            </ion-row>
+                        <ion-col size="2" class="ion-text-center">
+                            <ion-label color="secondary">
+                                <b>{{p.precio}}</b>
+                            </ion-label>
+                        </ion-col>
+                        <ion-col size="2" >
+                            <ion-button fill="clear" (click)="compra(p)">
+                                <ion-icon name="card" style="height: 40px; width: 40px;" >
+                                </ion-icon>
+                            </ion-button>
+                        </ion-col>
+                        <ion-col size="2" >
+                            <ion-button fill="clear" (click)="eliminar(p.idProducto)">
+                                <ion-icon name="trash" style="height: 40px; width: 40px;" >
+                                </ion-icon>
+                            </ion-button>
                         </ion-col>
                     </ion-row>
-                </ion-card-content>
+            </ion-card-content>
             </ion-card>
-        </ion-list>
     </div>
 
 </ion-content>
