--- a/src/app/paginas/carrito/carrito.page.scss
+++ b/src/app/paginas/carrito/carrito.page.scss
@@ -1,10 +1,13 @@
 .tras {
-    background: rgba(0, 0, 0, 0.2);
-    
-    
+    background: rgba(0, 0, 0, 0.2);   
 }
 
 b{
+    font-size: 20px;
     color: white;
+}
 
+h3{
+    font-size: 20px;
+    color: #FF6600 ;
 }
